syntax = "proto3";

package users;

message PingRequest {}

message PongResponse {
    bool ok = 1;
}

service PingPong {
    rpc Ping(PingRequest) returns (PongResponse) {}
}